k8s/parser/parser copy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sys-pod-message-parser
  labels:
    app: parser
spec:
  nodeName:  testing-cluster-pool-bnp17
  containers:
  - name: parser
    image: giovaz94/parser-service:development
