k8s/parser/parser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parser
spec:
  selector:
    matchLabels:
      app: parser
  template:
    metadata:
      labels:
        app: parser
    spec:
      containers:
        - name: parser
          image: giovaz94/parser-service:development
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8011
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: parser-service
spec:
  selector:
    app: parser
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
