k8s/parser/queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
  labels:
    app: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      name: queue
      labels:
        app: queue
    spec:
      containers:
        - name: queue
          image: giovaz94/rabbitmq-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: amqp
              containerPort: 5672
            - name: management
              containerPort: 15672
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: queue-service
spec:
  selector:
    app: queue
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
